more work on bootstrapping stages
* the experiment encoding stage, emitters and build/target hosts in
platforms did not work out. problem is toolchain transitions set
target equal to exec (build) host, leaving us with target constrains
in the build platform. could not get this to work
* so platforms are just for runtime and executor; emitters and build
stages handled by toolchain and build rules, using config
settings (e.g. a label_flag for the compiler and lexer) and
transitions
* so this gives us a toolchain with dynamic compiler and lexer fields,
using label settings set at build time by transitions.

--- a/.bazelrc
+++ b/.bazelrc
@@ -84,53 +84,58 @@ build --workspace_status_command=$PWD/bzl/camlheader.sh
 ## OCaml platforms: boot, vm, sys
 
 # default
-build --host_platform=//platform/ocaml:sys_vm_vm
-build --platforms=//platform/ocaml:sys_vm_vm
+build --host_platform=//platform/ocaml:sys_vm
+# default: build --//config/emitter/build:vm
+build --platforms=//platform/ocaml:sys_vm
+# default: build --//config/emitter/target:vm
 
-build:boot --host_platform=//platform/ocaml:boot
-build:boot --platforms=//platform/ocaml:boot
+build:boot --host_platform=//platform/ocaml:boot_build
+build:boot --platforms=//platform/ocaml:boot_target
 
-build:boot.ocamlopt.byte --host_platform=//platform/ocaml:boot
-build:boot.ocamlopt.byte --platforms=//platform/ocaml:sys_vm_sys
+build:boot.ocamlopt.byte --host_platform=//platform/ocaml:boot_build
+build:boot.ocamlopt.byte --platforms=//platform/ocaml:sys_vm_sys_target
 
-build:ocamlc --host_platform=//platform/ocaml:sys_vm_vm
-build:ocamlc --platforms=//platform/ocaml:sys_vm_vm
+build:baseline_vmvm --host_platform=//platform/ocaml:baseline_build
+build:baseline_vmvm --platforms=//platform/ocaml:baseline_vm_vm_target
 
-build:ocamlc.byte --host_platform=//platform/ocaml:sys_vm_vm
-build:ocamlc.byte --platforms=//platform/ocaml:sys_vm_vm
+################################################################
+# build:ocamlc --host_platform=//platform/ocaml:sys_vm_vm_build
+# build:ocamlc --platforms=//platform/ocaml:sys_vm_vm_target
 
-build:ocamlopt.byte --host_platform=//platform/ocaml:sys_vm_vm
-build:ocamlopt.byte --platforms=//platform/ocaml/target:sys_vm_sys
--compat-32
+build:ocamlc.byte --host_platform=//platform/ocaml:sys_vm_vm_build
+build:ocamlc.byte --platforms=//platform/ocaml:sys_vm_vm_build
+
+build:ocamlopt.byte --host_platform=//platform/ocaml:sys_vm_vm_build
+build:ocamlopt.byte --platforms=//platform/ocaml:sys_vm_sys_target
+
 ## to emit sys_sys, build host can be either sys_sys_sys or sys_vm_sys
+build:ocamlc.opt --host_platform=//platform/ocaml:sys_vm_sys_build
+build:ocamlc.opt --platforms=//platform/ocaml:sys_sys_vm_target
 
-build:ocamlc.opt --host_platform=//platform/ocaml:sys_sys_sys
-build:ocamlc.opt --platforms=//platform/ocaml:sys_vm
-
-build:ocamlopt.opt --host_platform=//platform/ocaml:sys_sys_sys
-build:ocamlopt.opt --platforms=//platform/ocaml:sys_sys
+# build:ocamlopt.opt --host_platform=//platform/ocaml:sys_sys_sys
+# build:ocamlopt.opt --platforms=//platform/ocaml:sys_sys
 
 # build:boot --host_platform=//platform/build:boot
 # build:boot --platforms=//platform/target:boot
 
-build:dev --host_platform=//platform/build:dev
-build:dev --platforms=//platform/target:dev
+# build:dev --host_platform=//platform/build:dev
+# build:dev --platforms=//platform/target:dev
 
-build:vmvm --host_platform=//platform/build:vm
-build:vmvm --platforms=//platform/target:vm
+# build:vmvm --host_platform=//platform/build:vm
+# build:vmvm --platforms=//platform/target:vm
 
-build:sysvm --host_platform=//platform/build:sys
-build:sysvm --platforms=//platform/target:vm
+# build:sysvm --host_platform=//platform/build:sys
+# build:sysvm --platforms=//platform/target:vm
 
-build:vmsys --host_platform=//platform/build:vm
-build:vmsys --platforms=//platform/target:sys
+# build:vmsys --host_platform=//platform/build:vm
+# build:vmsys --platforms=//platform/target:sys
 
-build:syssys --host_platform=//platform:sys
-build:syssys --platforms=//platform:sys
+# build:syssys --host_platform=//platform:sys
+# build:syssys --platforms=//platform:sys
 
-#### cross-compilation
-build:vmvmsys --host_platform=//platform:vm
-build:vmvmsys --platforms=//platform/xtarget=sys
+# #### cross-compilation
+# build:vmvmsys --host_platform=//platform:vm
+# build:vmvmsys --platforms=//platform/xtarget=sys
 
 
 ################################################################
