--- a/boot/toolchain/selector/BUILD.bazel
+++ b/boot/toolchain/selector/BUILD.bazel
@@ -16,53 +16,109 @@ toolchain_selector(
     type           = "//boot/toolchain/type:boot",
     adapter        = "//boot/toolchain/adapter:boot",
     build_host_constraints  = [
-        # platform: boot == sys_vm_vm + boot
         "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm",
-        "//platform/constraints/stage:boot"
-    ],
-    # the boot compiler can only emit bytecode, but
-    # the vm compilers it emits can themselves emit either
-    # (i.e. it can build only ocamlc.byte and ocamlopt.byte)
-    # therefore the target emitter is unconstrained.
-    # target_host_constraints = [
-    #     # platform: sys_vm_vm
-    #     "//platform/constraints/ocaml/target/executor:vm",
-    #     "//platform/constraints/ocaml/emitter:vm"
-    # ],
-)
 
-toolchain_selector(
-    name           = "vmvm",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:boot",
-    build_host_constraints  = [
-        # platform: sys_vm_vm
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
+        # platform: boot_build == sys_vm_vm + build + boot
+        # "//platform/constraints/ocaml/build/executor:vm",
+        # "//platform/constraints/ocaml/build/emitter:vm",
+        # "//platform/constraints/stage:boot"
     ],
-    target_host_constraints  = [
-        # platform: sys_vm_vm
+    target_host_constraints = [
         "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
+
+        # platform: boot_target == sys_vm_vm + target + boot
+        # "//platform/constraints/ocaml/target/executor:vm",
+        # "//platform/constraints/ocaml/target/emitter:vm",
+        # "//platform/constraints/stage:boot"
     ],
 )
 
-toolchain_selector(
-    name           = "vmsys",
-    type           = "//boot/toolchain/type:boot",
-    adapter        = "//boot/toolchain/adapter:baseline",
-    build_host_constraints  = [
-        # platform: sys_vm_vm
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
-    ],
-    target_host_constraints  = [
-        # platform: sys_vm_sys
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:sys"
-    ],
-)
+# toolchain_selector(
+#     name           = "baseline",
+#     type           = "//boot/toolchain/type:boot",
+#     adapter        = "//boot/toolchain/adapter:baseline",
+#     build_host_constraints  = [
+#         # platform: boot_build == sys_vm_vm + build + boot
+#         "//platform/constraints/ocaml/build/executor:vm",
+#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/stage:baseline"
+#     ],
+#     target_host_constraints = [
+#         # platform: boot_target == sys_vm_vm + target + boot
+#         # "//platform/constraints/ocaml/target/executor:vm",
+#         # "//platform/constraints/ocaml/target/emitter:vm",
+#         "//platform/constraints/stage:baseline"
+#     ],
+# )
+
+# toolchain_selector(
+#     name           = "boot_boot",
+#     type           = "//boot/toolchain/type:boot",
+#     adapter        = "//boot/toolchain/adapter:boot",
+#     build_host_constraints  = [
+#         # platform: boot_build == sys_vm_vm + build + boot
+#         "//platform/constraints/ocaml/build/executor:vm",
+#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/stage:boot"
+#     ],
+#     target_host_constraints = [
+#         # platform: boot_target == sys_vm_vm + target + boot
+#         "//platform/constraints/ocaml/build/executor:vm",
+#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/stage:boot"
+#     ],
+# )
+
+## for toolchain transitions setting target = build
+# toolchain_selector(
+#     name           = "baseline_involute",
+#     type           = "//boot/toolchain/type:boot",
+#     adapter        = "//boot/toolchain/adapter:boot",
+#     build_host_constraints  = [
+#         # platform: boot_build == sys_vm_vm + build + boot
+#         "//platform/constraints/ocaml/build/executor:vm",
+#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/stage:baseline"
+#     ],
+#     target_host_constraints  = [
+#         # platform: boot_build == sys_vm_vm + build + boot
+#         "//platform/constraints/ocaml/build/executor:vm",
+#         "//platform/constraints/ocaml/build/emitter:vm",
+#         "//platform/constraints/stage:baseline"
+#     ],
+# )
+
+# toolchain_selector(
+#     name           = "vmvm",
+#     type           = "//boot/toolchain/type:boot",
+#     adapter        = "//boot/toolchain/adapter:boot",
+#     build_host_constraints  = [
+#         # platform: sys_vm_vm
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm"
+#     ],
+#     target_host_constraints  = [
+#         # platform: sys_vm_vm
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm"
+#     ],
+# )
+
+# toolchain_selector(
+#     name           = "vmsys",
+#     type           = "//boot/toolchain/type:boot",
+#     adapter        = "//boot/toolchain/adapter:baseline",
+#     build_host_constraints  = [
+#         # platform: sys_vm_vm
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm"
+#     ],
+#     target_host_constraints  = [
+#         # platform: sys_vm_sys
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:sys"
+#     ],
+# )
 
 # toolchain_selector(
 #     name           = "xvmsys",
@@ -80,33 +136,33 @@ toolchain_selector(
 #     ],
 # )
 
-toolchain_selector(
-    name           = "baseline",
-    type           = "//boot/toolchain/type:baseline",
-    adapter        = "//boot/toolchain/adapter:baseline",
-    build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm",
-        # make this unselectable:
-        # "//platform/constraints/stage:prod",
-    ],
-    # target_host_constraints  = [
-    #     "//platform/constraints/ocaml/executor:vm",
-    #     "//platform/constraints/ocaml/emitter:vm"
-    # ],
-)
+# toolchain_selector(
+#     name           = "baseline",
+#     type           = "//boot/toolchain/type:baseline",
+#     adapter        = "//boot/toolchain/adapter:baseline",
+#     build_host_constraints  = [
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm",
+#         # make this unselectable:
+#         # "//platform/constraints/stage:prod",
+#     ],
+#     # target_host_constraints  = [
+#     #     "//platform/constraints/ocaml/executor:vm",
+#     #     "//platform/constraints/ocaml/emitter:vm"
+#     # ],
+# )
 
-toolchain_selector(
-    name           = "stdlib",
-    type           = "//boot/toolchain/type:stdlib",
-    adapter        = "//boot/toolchain/adapter:stdlib",
-    build_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
-    ],
-    target_host_constraints  = [
-        "//platform/constraints/ocaml/executor:vm",
-        "//platform/constraints/ocaml/emitter:vm"
-    ],
-)
+# toolchain_selector(
+#     name           = "stdlib",
+#     type           = "//boot/toolchain/type:stdlib",
+#     adapter        = "//boot/toolchain/adapter:stdlib",
+#     build_host_constraints  = [
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm"
+#     ],
+#     target_host_constraints  = [
+#         "//platform/constraints/ocaml/executor:vm",
+#         "//platform/constraints/ocaml/emitter:vm"
+#     ],
+# )
 
