--- a/bzl/BUILD.bazel
+++ b/bzl/BUILD.bazel
@@ -1,58 +1,1 @@
-load("@bazel_skylib//rules:common_settings.bzl",
-     "int_flag", "int_setting",
-     "string_flag", "string_setting"
-)
-load(":BUILD.bzl", "emitter_setting")
-
-emitter_setting(
-    name = "build_emitter",
-    build_setting_default = "null",
-    emitter = select({
-        "//platform/constraints/ocaml/emitter:sys?": "sys",
-        "//platform/constraints/ocaml/emitter:vm?": "vm",
-    }),
-    visibility = ["//visibility:public"]
-)
-
-emitter_setting(
-    name = "target_emitter",
-    build_setting_default = "null",
-    emitter = select({
-        "//platform/constraints/ocaml/target/emitter:sys?": "sys",
-        "//platform/constraints/ocaml/target/emitter:vm?": "vm",
-    }),
-    visibility = ["//visibility:public"]
-)
-
-# string_setting(
-#     name = "emitter",
-#     values = ["vm", "sys", "amd64", "arm64"],
-#     build_setting_default = "vm",
-#     visibility = ["//visibility:public"]
-# )
-
-int_flag(
-    name = "stage",
-    # values = [0, 1, 2, 3],
-    build_setting_default = 0,
-    visibility = ["//visibility:public"]
-)
-
-# int_setting(
-#     name = "stage0",
-#     build_setting_default = 0,
-#     visibility = ["//visibility:public"]
-# )
-
-# int_setting(
-#     name = "stage1",
-#     build_setting_default = 1,
-#     visibility = ["//visibility:public"]
-# )
-
-# int_setting(
-#     name = "stage2",
-#     build_setting_default = 2,
-#     visibility = ["//visibility:public"]
-# )
-
+# do not remove
