--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -45,15 +45,13 @@ register_execution_platforms(
     # IMPORTANT: ordered by constraint "strength" - more constraints
     # before fewer.
 
-    "//platform/ocaml:boot", # sys_vm_vm + boot",
-    "//platform/ocaml:sys_vm_sys",
+    "//platform/ocaml:sys_vm",
+    "//platform/ocaml:sys_sys"
 
-    "//platform/ocaml:sys_vm_vm",
+    # "//platform/ocaml:boot_target", # sys_vm_vm + build + boot",
+    # "//platform/ocaml:baseline_build",
 
-    "//platform/ocaml/target:sys_vm_sys",
-
-    # "//platform/ocaml:sys_vm_vm",    # "//boot/platforms:baseline",
-    # "//platform:default",
+    # "//platform/ocaml:sys_vm_vm_build",
 )
 
 # register_toolchains("@ocaml//toolchain/selectors/local:vmvm")
@@ -61,8 +59,11 @@ register_toolchains(
 
     "//boot/toolchain/selector:boot",
 
-    "//boot/toolchain/selector:vmvm",
-    "//boot/toolchain/selector:vmsys",
+    # "//boot/toolchain/selector:baseline",
+    # "//boot/toolchain/selector:baseline_involute",
+
+    # "//boot/toolchain/selector:vmvm",
+    # "//boot/toolchain/selector:vmsys",
 
     # "//boot/toolchain/selector:xvmsys",
 
