--- a/boot/toolchain/BUILD.bazel
+++ b/boot/toolchain/BUILD.bazel
@@ -1,10 +1,10 @@
 
 label_setting(name="compiler",
-              build_setting_default = "//boot:ocamlc.byte",
+              build_setting_default = "//boot:ocamlc.boot",
               visibility = ["//visibility:public"])
 
 label_setting(name="lexer",
-              build_setting_default = "//boot:ocamllex.byte",
+              build_setting_default = "//boot:ocamllex.boot",
               visibility = ["//visibility:public"])
 
 label_setting(name="stdlib",
