--- a/lex/BUILD.bazel
+++ b/lex/BUILD.bazel
@@ -30,7 +30,7 @@ SIG_OPTS    =  ["-strict-formats"]
 ## HACK ALERT. There's a bug in the rules. The dependency on
 ## //lib:Stdlib should be added automatically, either by the toolchain
 ## or by the rules.
-STDLIB = ["//stdlib:Stdlib"]
+ # STDLIB = ["//stdlib:Stdlib"]
 
 ## Makefile.common
 # Lexer generation
@@ -110,7 +110,7 @@ compiler_module(
     struct = "common.ml",
     sig    = "Common_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax", ## (Lex Syntax)
         ":Lexgen", ## (Lex Lexgen)
         "//stdlib:Stdlib.Sys",
@@ -125,7 +125,7 @@ compiler_signature(
     name = "Common_cmi",
     src  = "common.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax", ## (Lex Syntax)
         ":Lexgen", ## (Lex Lexgen)
     ]
@@ -136,7 +136,7 @@ compiler_module(
     struct = "compact.ml",
     sig    = "Compact_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Lexgen", ## (Lex Lexgen)
         ":Table", ## (Lex Table)
         "//stdlib:Stdlib.List",
@@ -149,7 +149,7 @@ compiler_signature(
     name = "Compact_cmi",
     src  = "compact.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax_cmi", ## (Lex Syntax)
         ":Lexgen_cmi", ## (Lex Lexgen)
     ]
@@ -160,7 +160,7 @@ compiler_module(
     struct = "cset.ml",
     sig    = "Cset_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Int",
         "//stdlib:Stdlib.Array",
@@ -171,16 +171,16 @@ compiler_signature(
     name = "Cset_cmi",
     src  = "cset.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
     ]
 )
 
 compiler_module(
     name   = "Lexer",
-    struct = "lexer.ml",
+    struct = "lexer_ml",
     sig    = "Lexer_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Parser"
     ],
     visibility = ["//file_formats:__pkg__"]
@@ -188,7 +188,7 @@ compiler_module(
 
 boot_lexer(
     name = "lexer_ml",
-    out  = "lexer.ml",
+    # out  = "lexer.ml",
     src  = "lexer.mll"
 )
 
@@ -196,7 +196,7 @@ compiler_signature(
     name = "Lexer_cmi",
     src  = "lexer.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Parser"
     ]
 )
@@ -206,7 +206,7 @@ compiler_module(
     struct = "lexgen.ml",
     sig    = "Lexgen_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Table", ## (Lex Table)
         ":Syntax", ## (Lex Syntax)
         ":Cset", ## (Lex Cset)
@@ -227,7 +227,7 @@ compiler_signature(
     name = "Lexgen_cmi",
     src  = "lexgen.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax_cmi", ## (Lex Syntax)
     ]
 )
@@ -237,7 +237,7 @@ compiler_module(
     struct = "main.ml",
     sig    = "Main_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Arg",
         "//stdlib:Stdlib.Filename",
         "//stdlib:Stdlib.Lexing",
@@ -265,7 +265,7 @@ compiler_signature(
     name = "Main_cmi",
     src  = "main.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         # ":Syntax_cmi", ## (Lex Syntax)
         # ":Lexgen_cmi", ## (Lex Lexgen)
         # ":Compact_cmi", ## (Lex Compact)
@@ -278,7 +278,7 @@ compiler_module(
     struct = "output.ml",
     sig    = "Output_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax", ## (Lex Syntax)
         ":Lexgen", ## (Lex Lexgen)
         ":Compact", ## (Lex Compact)
@@ -294,7 +294,7 @@ compiler_signature(
     name = "Output_cmi",
     src  = "output.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax_cmi", ## (Lex Syntax)
         ":Lexgen_cmi", ## (Lex Lexgen)
         ":Compact_cmi", ## (Lex Compact)
@@ -307,7 +307,7 @@ compiler_module(
     struct = "outputbis.ml",
     sig    = "Outputbis_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax", ## (Lex Syntax)
         ":Lexgen", ## (Lex Lexgen)
         ":Common", ## (Lex Common)
@@ -323,7 +323,7 @@ compiler_signature(
     name = "Outputbis_cmi",
     src  = "outputbis.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax_cmi", ## (Lex Syntax)
         ":Lexgen_cmi", ## (Lex Lexgen)
         ":Common_cmi", ## (Lex Common)
@@ -335,7 +335,7 @@ compiler_module(
     struct = "parser.ml",
     sig    = ":Parser_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax",
         "//stdlib:Stdlib.Lexing",
         "//stdlib:Stdlib.Hashtbl",
@@ -348,7 +348,7 @@ compiler_signature(
     name = "Parser_cmi",
     src  = "parser.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Syntax",
         "//stdlib:Stdlib.Lexing",
     ]
@@ -374,7 +374,7 @@ compiler_module(
     struct = "syntax.ml",
     sig    = "Syntax_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Cset", ## (Lex Cset)
     ]
 )
@@ -383,7 +383,7 @@ compiler_signature(
     name = "Syntax_cmi",
     src  = "syntax.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         ":Cset_cmi", ## (Lex Cset)
     ]
 )
@@ -393,7 +393,7 @@ compiler_module(
     struct = "table.ml",
     sig    = "Table_cmi",
     opts = MODULE_OPTS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Array",
     ]
 )
@@ -402,7 +402,7 @@ compiler_signature(
     name = "Table_cmi",
     src  = "table.mli",
     opts = SIG_OPTS,
-    deps   = STDLIB + [
+    deps   = [
     ]
 )
 
