--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -416,7 +416,7 @@ genrule(
 
 compiler_module(
     name   = "Lexer",
-    struct = "lexer.ml",
+    struct = "lexer_ml",
     sig    = "Lexer_cmi",
     opts = MODULE_OPTS,
     deps   = [
@@ -433,7 +433,7 @@ compiler_module(
 
 boot_lexer(
     name = "lexer_ml",
-    out  = "lexer.ml",
+    # out  = "lexer.ml",
     src  = "lexer.mll"
 )
 
